check_error_queue_utf8_3.txt
cargo : warning: C:\Users\Trinity\Documents\daydream\As
k_Pete\crates\ask_pete_client\Cargo.toml: unused 
manifest key: dependencies.tokio.getrandom
At line:1 char:1
+ cargo check -p ask_pete_server 2>&1 | Out-File 
-Encoding utf8 check_e ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning:  
   C:\Use...tokio.getrandom:String) [], RemoteExcepti  
  on
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused variable: `i`
  --> crates\ask_pete_ai\src\iron_split.rs:96:13
   |
96 |         for i in 0..max_tokens {
   |             ^ help: if this is intentional, 
prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of 
`#[warn(unused)]`) on by default

warning: `ask_pete_ai` (lib) generated 1 warning
    Checking ask_pete_server v0.1.0 (C:\Users\Trinity\D
ocuments\daydream\Ask_Pete\crates\ask_pete_server)
error[E0277]: the trait bound `for<'r> WordPhysics: 
FromRow<'r, _>` is not satisfied
   --> crates\ask_pete_server\src\services\weigh_statio
n.rs:87:39
    |
 87 |         let row = sqlx::query_as::<_, 
WordPhysics>(
    |                                       
^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `for<'r> FromRow<'r, _>` is not 
implemented for `WordPhysics`
   --> crates\ask_pete_server\src\services\weigh_statio
n.rs:9:1
    |
  9 | pub struct WordPhysics {
    | ^^^^^^^^^^^^^^^^^^^^^^
    = help: the following other types implement trait 
`FromRow<'r, R>`:
              `()` implements `FromRow<'r, R>`
              `(T1, T2)` implements `FromRow<'r, R>`
              `(T1, T2, T3)` implements `FromRow<'r, 
R>`
              `(T1, T2, T3, T4)` implements 
`FromRow<'r, R>`
              `(T1, T2, T3, T4, T5)` implements 
`FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6)` implements 
`FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6, T7)` 
implements `FromRow<'r, R>`
              `(T1, T2, T3, T4, T5, T6, T7, T8)` 
implements `FromRow<'r, R>`
            and 14 others
note: required by a bound in `sqlx::query_as`
   --> C:\Users\Trinity\.cargo\registry\src\index.crate
s.io-1949cf8c6b5b557f\sqlx-core-0.8.6\src\query_as.rs:3
45:8
    |
342 | pub fn query_as<'q, DB, O>(sql: &'q str) -> 
QueryAs<'q, DB, O, <DB as Database>::Arguments<'q>>
    |        -------- required by a bound in this 
function
...
345 |     O: for<'r> FromRow<'r, DB::Row>,
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by 
this bound in `query_as`

error[E0599]: the method `fetch_optional` exists for 
struct `QueryAs<'_, _, WordPhysics, _>`, but its trait 
bounds were not satisfied
  --> crates\ask_pete_server\src\services\weigh_station
.rs:94:10
   |
 9 |   pub struct WordPhysics {
   |   ---------------------- doesn't satisfy 
`WordPhysics: FromRow<'r, _>`
...
87 |           let row = sqlx::query_as::<_, 
WordPhysics>(
   |  ___________________-
88 | |             r#"
89 | |             SELECT word, definition, 
grade_level, tier, weight, tags
90 | |             FROM vocabulary_words WHERE word = 
$1
...  |
93 | |         .bind(word)
94 | |         .fetch_optional(&self.db)
   | |         -^^^^^^^^^^^^^^ method cannot be called 
on `QueryAs<'_, _, WordPhysics, _>` due to unsatisfied 
trait bounds
   | |_________|
   |
   |
   = note: the following trait bounds were not 
satisfied:
           `WordPhysics: FromRow<'r, _>`

error[E0308]: mismatched types
  --> 
crates\ask_pete_server\src\services\chat_queue.rs:77:65
   |
77 |                         map.insert(job.id, 
JobStatus::Completed(data));
   |                                            
-------------------- ^^^^ expected `PeteResponse`, 
found `SocraticResponse`
   |                                            |
   |                                            
arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> 
crates\ask_pete_server\src\services\chat_queue.rs:14:5
   |
14 |     Completed(PeteResponse),
   |     ^^^^^^^^^

Some errors have detailed explanations: E0277, E0308, 
E0599.
For more information about an error, try `rustc 
--explain E0277`.
error: could not compile `ask_pete_server` (bin 
"ask_pete_server") due to 3 previous errors
